# FalcoSecurity.Plugin.Sdk

./: .gitignore  Falco.Plugin.Sdk.sln  FalcoSecurity.Plugin.Sdk.sln  README.md  run_tests.ps1  run_tests.sh
Falco.Plugin.Sdk/: Enums.cs  ExtractionField.cs  Falco.Plugin.Sdk.csproj  IConfigurable.cs  IEventSource.cs  IFieldExtractor.cs  PluginAttribute.cs  PluginBase.cs  PluginEvent.cs
Falco.Plugin.Sdk.DockerPlugin/: Falco.Plugin.Sdk.DockerPlugin.csproj  Plugin.cs  README.md
Falco.Plugin.Sdk.DummyPlugin/: Falco.Plugin.Sdk.DummyPlugin.csproj  Plugin.cs
Falco.Plugin.Sdk.Generators/: Falco.Plugin.Sdk.Generators.csproj  NativeExportsGenerator.cs
Falco.Plugin.Sdk.Generators.Staging/: Falco.Plugin.Sdk.Generators.Staging.csproj  Plugin.cs  PluginNativeExports.cs  README.md
Falco.Plugin.Sdk.PushPlugin/: Falco.Plugin.Sdk.PushPlugin.csproj  Plugin.cs
Falco.Plugin.Sdk.Test/: EventSourceTest.cs  ExtractFieldTest.cs  Falco.Plugin.Sdk.Test.csproj
Falco.Plugin.Sdk.TestPlugin/: Falco.Plugin.Sdk.TestPlugin.csproj  Plugin.cs
FalcoSecurity.Plugin.Sdk.DockerPlugin/: FalcoSecurity.Plugin.Sdk.DockerPlugin.csproj  Plugin.cs  README.md
FalcoSecurity.Plugin.Sdk.DummyPlugin/: FalcoSecurity.Plugin.Sdk.DummyPlugin.csproj  Plugin.cs
FalcoSecurity.Plugin.Sdk.Generators/: CHANGELOG.md  FalcoSecurity.Plugin.Sdk.Generators.csproj  Helpers.cs  NativeExportsGenerator.cs  (+4 more)
FalcoSecurity.Plugin.Sdk.Generators.Staging/: FalcoSecurity.Plugin.Sdk.Generators.Staging.csproj  Plugin.cs  PluginNativeExports.cs  README.md  override.c
interop/test/: CMakeLists.txt  build.sh  integration_test.cc
(+88 files in other folders)
